--- a/filecreate.yaml
+++ b/filecreate.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: create file
     file:
-      path: /home/ansible/testfile
+      path: /home/ansible/testfile1
       state: touch
   - name: create directory
     file:
